Fixes z-index of nav

--- a/_sass/modules/_nav.scss
+++ b/_sass/modules/_nav.scss
@@ -18,7 +18,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 10;
 
     > .container {
         @include outer-container;
